feat: chamo con fe

--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -11,6 +11,7 @@
   --color-darysa-gris-oscuro: #3d3d3b;
   --color-darysa-gris-oscuro-alt: #787878;
   --color-darysa-gris-claro: #c5c5c5;
+  --color-darysa-gris-claro-alt: #d6d6d6;
   --color-darysa-gris-medio: #5c5c5c;
   --color-darysa-amarillo: #ffcc00;
   --color-darysa-verde: #6fb74d;
