--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -13,12 +13,11 @@
   --color-darysa-gris-claro: #c5c5c5;
   --color-darysa-gris-claro-alt: #d6d6d6;
   --color-darysa-gris-medio: #5c5c5c;
+  --color-darysa-gris-medio-alt: #3c3c3c;
+  --color-darysa-gris-medio-alt-2: #8e8e93;
   --color-darysa-amarillo: #ffcc00;
   --color-darysa-verde: #6fb74d;
   --color-darysa-verde-oscuro: #44ac34;
-  /* --color-darysa-caption: #c5c5c5;
-  --color-darysa-muted: #c5c5c5; */
-
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
