feat: vista home parcial

--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -12,6 +12,7 @@
   --font-inter: var(--font-inter);
   --color-darysa-gris-oscuro: #3d3d3b;
   --color-darysa-gris-oscuro-alt: #787878;
+  --color-darysa-gris-oscuro-alt-2: #696969;
   --color-darysa-gris-claro: #c5c5c5;
   --color-darysa-gris-claro-alt: #d6d6d6;
   --color-darysa-gris-medio: #5c5c5c;
